# mlx5cmd

./: Cargo.toml  bind_vfio_driver.sh  check_data.py  setup_vfio.sh  test_alu.asm  test_csr.asm  test_shellcode.asm  test_store.asm  test_unkr.asm
shellcodes/: test_load.asm  test_read_mem.asm  test_stb.asm  test_unki.asm  test_unkr_raw.asm  test_unkst.asm
src/: allocator.rs  cmdif.rs  commands.rs  cqe.rs  error.rs  init.rs  lib.rs  mailbox.rs  main.rs  mlx.rs  mtcr.rs  registers.rs  types.rs
src/cmdif/: vfio.rs
src/commands/: access_register.rs  create_mkey.rs  eq.rs  hca.rs  issi.rs  manage_pages.rs  pd.rs  query_adapter.rs  query_pages.rs  set_driver_version.rs  uar.rs
src/registers/: flash.rs  mtrc.rs
src/types/: access_register.rs  alloc_pd.rs  create_mkey.rs  exec_shellcode.rs  hca.rs  issi.rs  manage_pages.rs  query_adapter.rs  query_hca_cap.rs  query_pages.rs  set_driver_version.rs
