[package]
name = "mlx5cmd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
dbg_hex = "0.2.0"
env_logger = "0.11.3"
libc = "0.2.153"
log = "0.4.21"
pci-driver = "0.1.4"
thiserror = "1.0.58"
