[package]
name = "mlx5cmd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.89"
clap = { version = "4.5.4", features = ["derive"] }
clap-num = "1.1.1"
dbg_hex = "0.2.0"
deku = "0.16.0"
env_logger = "0.11.3"
eventfd = "0.2.0"
irisc-asm = { git = "ssh://git@github.com/irisc-research-syndicate/irisc-asm.git", version = "0.1.0" }
libc = "0.2.153"
log = "0.4.21"
pci-driver = "0.1.4"
serde = { version = "1.0.201", features = ["derive"] }
serde_as = "0.0.1"
serde_json = "1.0.117"
serde_with = "3.8.1"
thiserror = "1.0.58"
xalloc = "0.2.7"
